--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<h1 style="display:none">Welcome to {{title}}!</h1>
 <app-header></app-header>
 <div class='content'>
   <router-outlet></router-outlet>
