--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,12 @@
                 url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.ttf?v=4.3.0") format("truetype"),
                 url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg");
 }
+
 html {
   background: url(http://www.storywarren.com/wp-content/uploads/2016/09/space-1.jpg);
 }
 body {
   margin: 0;
   padding: 0;
-  background-color: transparent;
+  background-color: transparent !important;
 }
