--- a/src/app/components/views/image-detail/image-detail.view.html
+++ b/src/app/components/views/image-detail/image-detail.view.html
@@ -1,4 +1,11 @@
-<h1 style="color:white">IMAGE</h1>
-<p style="color:white">
+<h1>IMAGE</h1>
+<p>
     NOTHING HERE YET
 </p>
+<h4 (click)="toggle()">
+    <span class="pointer pDown"></span>
+    METADATA
+</h4>
+<pre class="toggleArea">
+    {{ metaData | json }}
+</pre>
