--- a/src/app/components/go-back/go-back.component.css
+++ b/src/app/components/go-back/go-back.component.css
@@ -4,8 +4,9 @@
     border-color: rgb(255, 0, 0);
     background-color: rgb(255, 0, 0);
     text-align: center;
-    width: 25%;
-    margin-bottom: 10px;
+    width: 20%;
+    margin: 10px;
+    color: rgb(255,255,255);
 }
 .goBack:active {
     background-color: rgb(68, 0, 0);
