*added fullscreen viewing of image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1 style="display:none">Welcome to {{title}}!</h1>
-<app-header></app-header>
-<div class='content'>
-  <router-outlet></router-outlet>
+<div class="overlay"></div>
+<div id="main">
+  <h1 style="display:none">Welcome to {{title}}!</h1>
+  <app-header></app-header>
+  <div class='content'>
+    <router-outlet></router-outlet>
+  </div>
 </div>
