--- a/src/app/components/views/image-detail/image-detail.view.css
+++ b/src/app/components/views/image-detail/image-detail.view.css
@@ -10,3 +10,13 @@
 .pUp::before {
     content: "\f102"
 }
+
+.fullscreen {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 95%;
+    max-height: 95%;
+    z-index: 11;
+  }
